Changelog
=========

2019.4.0rc5 (unreleased)
------------------------

- Nothing changed yet.


2019.4.0rc4 (2019-10-22)
------------------------

- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites by UID parameter via favorites endpoint. [phgross]
- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites with UID parameter via favorites endpoint. [phgross]
- Bump ftw.keywordwidget version to fix missing titles on terms. [njohner]
- Allow text field in task deadline modification through API. [njohner]
- Make `issuer` filterable in the @lising endpoint. [elioschmutz]
- Implement absolute reminder dates in the reminder-selector. [elioschmutz]
- Fix mail deserialization for mails uploaded through tus-upload. [njohner]
- Downpin ftw.recipe.solr to 1.2.1 to have log4j configuration valid for solr < 7.4.X [deiferni]
- Use plone.restapi summary serialization in the recently-touched endpoint. [phgross]
- document_report: Add support for pseudo-relative paths. [lgraf]
- pdf-dossier-listing: Add support for pseudo-relative paths. [lgraf]
- dossier_report: Add support for pseudo-relative paths. [lgraf]
- zip_selected view: Add support for pseudo-relative paths. [lgraf]
- Fix a problem in the watcher handling when reassigning a task to the same user but a different org unit. [phgross]
- Support the bundle-import of mails in the msg format. [phgross]
- Add API endpoints for user-setings and add additional setting seen_tours. [phgross]
- Support the bundle-import of mails in the msg format. [phgross]
- Add API endpoints for user-setings and add additional setting seen_tours. [phgross]
- Extend @solrsearch endpoint by adding various useful information like item count, attributes from contentlisting objects, facets and snippets. [buchi]


2019.4.0rc3 (2019-10-02)
------------------------

- Add GET implementation for @reminder endpoint. [lgraf]
- Add new reminder type ReminderOnDate (backend only). [lgraf]